--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.0"
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.12.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
